<resources>
    <string name="app_name">SimpleTodo</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">Add Item</string>
    <string name="hint">Enter task name</string>
    <string name="text_view">Edit item below:</string>
    <string name="save_btn">SAVE</string>
    <string name="action_add_text">Add Task</string>
    <string name="action_done_text">Done</string>
    <string name="task_name">Task Name:</string>
    <string name="task_notes">Notes:</string>
    <string name="task_status">Status:</string>
    <string name="task_date">Due Date:</string>
    <string-array name="task_status_values">
        <item>TO-DO</item>
        <item>DONE</item>
    </string-array>
    <string name="task_priority">Priority:</string>
    <string-array name="task_priority_values">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>
</resources>