<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/large_pad">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:layout_weight="0.5"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
        <EditText
            android:id="@+id/task_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:hint="@string/hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/large_pad">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_notes"
            android:layout_weight="0.5"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
        <EditText
            android:id="@+id/task_notes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/large_pad">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/task_priority"
            android:layout_weight="0.5"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
        <Spinner
            android:id="@+id/priority_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/large_pad">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/task_status"
            android:layout_weight="0.5"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
       <Spinner
           android:id="@+id/status_spinner"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1.5" />
    </LinearLayout>


</LinearLayout>